; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/ppp/extr_throughput.c_throughput_stop.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/ppp/extr_throughput.c_throughput_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pppThroughput = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i64 }

@TIMER_STOPPED = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @throughput_stop(%struct.pppThroughput* %0) #0 {
  %2 = alloca %struct.pppThroughput*, align 8
  store %struct.pppThroughput* %0, %struct.pppThroughput** %2, align 8
  %3 = load %struct.pppThroughput*, %struct.pppThroughput** %2, align 8
  %4 = getelementptr inbounds %struct.pppThroughput, %struct.pppThroughput* %3, i32 0, i32 0
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @TIMER_STOPPED, align 8
  %8 = icmp ne i64 %6, %7
  br i1 %8, label %9, label %13

9:                                                ; preds = %1
  %10 = load %struct.pppThroughput*, %struct.pppThroughput** %2, align 8
  %11 = getelementptr inbounds %struct.pppThroughput, %struct.pppThroughput* %10, i32 0, i32 1
  %12 = call i32 @time(i32* %11)
  br label %13

13:                                               ; preds = %9, %1
  %14 = load %struct.pppThroughput*, %struct.pppThroughput** %2, align 8
  %15 = getelementptr inbounds %struct.pppThroughput, %struct.pppThroughput* %14, i32 0, i32 0
  %16 = call i32 @timer_Stop(%struct.TYPE_2__* %15)
  ret void
}

declare dso_local i32 @time(i32*) #1

declare dso_local i32 @timer_Stop(%struct.TYPE_2__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
